syntax ="proto3";
package protocol;

//optimize_for 加快解析的速度
option optimize_for = SPEED;

// 请求实体 type (0: 心跳, 1: 登录)
message WSBaseReqProto{
    int32 type = 1;
    uint64 uid = 2; // 用户ID
    string sid = 3; // 登录验证
}
